WIP fixing horizontal scroll alignment issues, but this is better than it was

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@ body {
 }
 
 .app {
-  /* width: 100vw;
-  height: 100vh; */
+  width: 100dvw;
+  /* height: 100dvh; */
 }
 
 nav {
