--- a/src/stylesheets/work.scss
+++ b/src/stylesheets/work.scss
@@ -222,9 +222,9 @@
   justify-content: center;
   align-items: center;
   padding-top: 5vh;
-  // font-family: Verdana, Geneva, Tahoma, sans-serif;
 
   .modal-content {
+
     // background-color: #070620;
     background-color: #09192c61;
     backdrop-filter: blur(100px);
@@ -232,7 +232,7 @@
 
     padding: 20px;
     border-radius: 8px;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     width: 100%;
@@ -240,6 +240,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media (max-width: 900px) {
+      padding: 0;
+      margin: 0;
+    }
 
     .modal-close-btn {
       position: absolute;
@@ -256,8 +261,11 @@
           .modal-close-btn {
             top: 2vh;
             right: 3vw;
-            z-index: 100;
+            z-index: 200;
           }
+
+          backdrop-filter: blur(20px);
+          -webkit-backdrop-filter: blur(20px);
     }
 
 
@@ -265,8 +273,12 @@
       width: 75%;
       display: flex;
       flex-direction: column;
-      // align-items: center;
+      align-items: center;
       padding: 20px;
+
+      @media (max-width: 900px) {
+        width: 90%;
+      }
 
       .modal-cover,
       .modal-cover-embed {
@@ -326,6 +338,7 @@
         display: flex;
         justify-content: flex-start;
         padding: 2% 0%;
+        width: 100%;
 
         ul {
           display: flex;
@@ -336,6 +349,7 @@
             border-radius: 8px;
             padding: 0.9% 1%;
             margin-right: 2%;
+            text-align: center;
 
             a {
               color: #9ac5ff;
@@ -347,11 +361,20 @@
       }
 
       @media (max-width: 900px) {
+        .modal-links {
+          width: 75%;
+        }
+
        ul {
          flex-direction: column;
         }
 
         li{
+          text-align: center;
+          padding: 3% !important;
+          margin: 3%;
+        }
+        a{
           text-align: center;
         }
       }
@@ -369,6 +392,16 @@
         width: 100%;
         text-align: left;
       }
+
+      
+       @media (max-width: 900px) {
+          p {
+            font-size: 0.7rem;
+            line-height: 2;
+            width: 100%;
+            text-align: left;
+          }
+        }
 
       .project-gallery {
         width: 100%;
@@ -403,5 +436,13 @@
         }
       }
     }
+
+    @media (max-width: 900px) {
+      width: 90%;
+    }
   }
+
+
 }
+
+
